--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,22 @@ body
     color:aqua;
     text-align: center;
     font-family: "Arial";
-
+    font-size: 10px;
+    margin:0;
+    padding:0;
+}    
+#container
+{
+    width: 70px;
+    text-align: left;
+    border: 1px solid #000;
+    margin: 0 auto;
 
 }
+
+#container h1
+{
+    font-size: 20px;
+}
+
+
