--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,19 +1,34 @@
 body 
 {
-    color:aqua;
+    color: #333;
     text-align: center;
     font-family: "Arial";
-    font-size: 10px;
+    font-size: 16px;
     margin:0;
     padding:0;
 }    
+#cabecera
+{
+    background:#33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.75);
+    color: white;
+    font-weight:bold;
+    margin:0;
+    padding: 0.5em;
+}
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
 #container
 {
-    width: 70px;
+    width: 70%;
+    padding:0;
     text-align: left;
-    border: 1px solid #000;
+    border: 1px solid #DDD;
     margin: 0 auto;
-
 }
 
 #container h1
@@ -21,4 +36,7 @@ body
     font-size: 20px;
 }
 
-
+#post
+{
+    padding: 1em;
+}
