--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,7 +26,7 @@ body
 {
     width: 70%;
     padding:0;
-    text-align: left;
+    text-align: center;
     border: 1px solid #DDD;
     margin: 0 auto;
 }
